Safari z-index fixes

--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -16,7 +16,7 @@
   background-color: white
   -webkit-transition: height 0.3s
   transition: height 0.3s
-  z-index: 2
+  z-index: 5
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.10)
 
   &__logo
@@ -161,7 +161,7 @@
   overflow: hidden
   background-color: $darkGrey
   color: white
-  z-index: 1
+  z-index: 4
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.10)
 
   ul
